--- a/templates/backend/admin/blog/blog-article-index.html.twig
+++ b/templates/backend/admin/blog/blog-article-index.html.twig
@@ -47,7 +47,7 @@
                                                         <a href="">
                                                             <i class="bi bi-pencil-square"></i>
                                                         </a>
-                                                        <a href="{{ path('app_article_category_delete',{'id':article.id}) }}" class="ms-2">
+                                                        <a href="{{ path('app_article_delete',{'id':article.id}) }}" class="ms-2">
                                                             <i class="bi bi-trash-fill"></i>
                                                         </a>
                                                     </td>
