--- a/templates/composant/nav-login.html.twig
+++ b/templates/composant/nav-login.html.twig
@@ -3,7 +3,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a href="{{ path('app_home') }}" class="logo d-flex align-items-center">
                 <img src="" alt="">
-                <span class="d-none d-lg-block">{{ 'app.logo'|trans }}</span>
+                <span class="d-none d-lg-block">AVIATION</span>
             </a>
             {% block sidebarIcon %}
                 <i class="bi bi-list toggle-sidebar-btn d-block d-lg-none"></i>
