--- a/templates/user/profile/edit-password.html.twig
+++ b/templates/user/profile/edit-password.html.twig
@@ -2,7 +2,7 @@
 
 {% block ads_password %}
     <li class="nav-item bx-border-circle">
-        <a class="nav-link collapsed bg-primary text-white" href="{{ path('user_profile', {'id': app.user.id, 'page': 'password'}) }}">
+        <a  style="background-color : var(--primary-color);" class="nav-link collapsed text-white" href="{{ path('user_profile', {'id': app.user.id, 'page': 'password'}) }}">
             <i class="bi bi-shield-lock text-white"></i>
             <span>{{ 'profile.change_password_link'|trans }}</span>
         </a>
