--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 
 :root {
   scroll-behavior: smooth;
+  --primary-color: #012970;
 }
 
 body {
@@ -354,8 +355,25 @@ h6 {
 
 @media (min-width: 1200px) {
   .logo {
-    width: 280px;
+    width: 380px;
   }
+}
+
+.btn-style-outline {
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #012970; /* Bootstrap primary */
+  background-color: transparent;
+  border: 1px solid #012970;
+  border-radius: 0.375rem;
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+
+.btn-style-outline:hover {
+  background-color: #012970;
+  color: #fff;
 }
 
 .logo img {
@@ -588,6 +606,12 @@ h6 {
   background-color: #f6f9ff;
 }
 
+/*----------- BLOG ARTICLE -------------*/
+.articles-preview { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-top: 1rem; }
+.articles-preview article { background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 1px 4px rgba(0,0,0,0.05); }
+.articles-preview img { width: 100%; height: 140px; object-fit: cover; }
+.articles-preview h3 { font-size: 1rem; padding: 0.5rem; }
+.articles-preview time { font-size: 0.75rem; padding: 0 0.5rem 1rem; color: #666; }
 /*--------------------------------------------------------------
 # Sidebar
 --------------------------------------------------------------*/
@@ -1226,782 +1250,7 @@ h6 {
   color: #012970;
 }
 
-.blog__area {
-  overflow: hidden;
-}
-.blog__area .row {
-  --bs-gutter-x: 60px;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .blog__area .row {
-    --bs-gutter-x: 40px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area .row {
-    --bs-gutter-x: 30px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area .row {
-    --bs-gutter-x: 20px;
-  }
-}
-.blog__area .sec-title-wrapper {
-  text-align: center;
-  padding-bottom: 60px;
-}
-.blog__area-2 {
-  overflow: hidden;
-  background-color: var(--black-2);
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area-2 .pt-150 {
-    padding-top: 150px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area-2 .pb-110 {
-    padding-bottom: 65px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-2 .pb-110 {
-    padding-bottom: 55px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-2 .pb-110 {
-    padding-bottom: 0;
-  }
-}
-.blog__area-2 .row {
-  --bs-gutter-x: 60px;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .blog__area-2 .row {
-    --bs-gutter-x: 40px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area-2 .row {
-    --bs-gutter-x: 30px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-2 .row {
-    --bs-gutter-x: 20px;
-  }
-}
-.blog__area-2 #btn_wrapper,
-.blog__area-2 .btn_wrapper {
-  margin-left: auto;
-  margin-right: -40px;
-  margin-top: -60px;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area-2 #btn_wrapper,
-  .blog__area-2 .btn_wrapper {
-    margin-right: -10px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-2 #btn_wrapper,
-  .blog__area-2 .btn_wrapper {
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 60px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-2 #btn_wrapper,
-  .blog__area-2 .btn_wrapper {
-    margin: 0;
-    margin-top: 30px;
-    margin-bottom: 50px;
-  }
-}
-.blog__area-2 .sec-title {
-  color: var(--white);
-  padding-top: 10px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-2 .sec-title {
-    padding-top: 45px;
-  }
-}
-.blog__area-2 .sec-text {
-  padding-top: 30px;
-}
-.blog__area-2 .sec-text p {
-  max-width: 340px;
-  font-size: 18px;
-  line-height: 1.4;
-  color: var(--gray-2);
-}
-.blog__area-2 .sec-btn {
-  margin-bottom: 30px;
-}
-.blog__area-2 .sec-btn a {
-  margin-left: auto;
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-2 .sec-btn a {
-    margin-left: 0;
-  }
-}
-.blog__area-3 {
-  overflow: hidden;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-3.pb-140 {
-    padding-bottom: 40px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-3.pb-140 {
-    padding-bottom: 20px;
-  }
-}
-.blog__area-3 .sec-title {
-  padding-bottom: 40px;
-  text-transform: uppercase;
-  background-color: var(--white);
-}
-.blog__area-3 .sec-title-wrapper {
-  position: relative;
-  padding-left: 330px;
-  margin-bottom: 60px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-3 .sec-title-wrapper {
-    padding-left: 200px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-3 .sec-title-wrapper {
-    padding-left: 0;
-  }
-}
-.blog__area-3 .sec-title-wrapper::after {
-  position: absolute;
-  content: "";
-  left: 39%;
-  top: 0;
-  width: 1px;
-  height: 100%;
-  background-color: var(--white-2);
-}
-.blog__area-3 .sec-title-wrapper p {
-  padding-top: 70px;
-  padding-bottom: 60px;
-  max-width: 330px;
-  font-size: 18px;
-  line-height: 1.4;
-  margin-left: 220px;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__area-3 .sec-title-wrapper p {
-    margin-left: 100px;
-    padding-top: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-3 .sec-title-wrapper p {
-    margin-left: 100px;
-    padding-top: 0;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-3 .sec-title-wrapper p {
-    margin-left: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-}
-.blog__area-3 .sec-sub-title {
-  padding-top: 50px;
-  text-transform: uppercase;
-  background-color: var(--white);
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-3 .sec-sub-title {
-    padding-top: 0;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-3 .sec-sub-title {
-    padding-top: 0;
-  }
-}
-.blog__area-6 {
-  overflow: hidden;
-}
-.blog__area-6 .pb-110 {
-  padding-bottom: 90px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-6 .pb-110 {
-    padding-bottom: 25px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-6 .pb-110 {
-    padding-bottom: 15px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__area-6 .sec-title-wrapper {
-    padding-top: 90px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__area-6 .sec-title-wrapper {
-    padding-top: 60px;
-  }
-}
-.blog__area-6 .blog__item, .blog__area-6 .blog__item-2 {
-  padding-bottom: 55px;
-  position: relative;
-  z-index: 1;
-}
-.blog__item, .blog__item-2 {
-  position: relative;
-  z-index: 5;
-}
-@media only screen and (max-width: 767px) {
-  .blog__item, .blog__item-2 {
-    padding-bottom: 50px;
-  }
-}
-.blog__item:hover .blog__img, .blog__item-2:hover .blog__img {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
-}
-.blog__item-2 {
-  text-align: center;
-}
-@media only screen and (max-width: 767px) {
-  .blog__item-2 {
-    padding-bottom: 30px;
-  }
-}
-.blog__item-3 {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  position: relative;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__item-3 {
-    -ms-grid-columns: 2.5fr 1fr;
-    grid-template-columns: 2.5fr 1fr;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__item-3 {
-    margin-bottom: 50px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__item-3 {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-    margin-bottom: 50px;
-  }
-}
-.blog__info-3 {
-  position: absolute;
-  width: 63%;
-  bottom: -1px;
-  right: 0;
-  margin-left: -50px;
-  background: var(--white);
-  z-index: 1;
-  padding: 40px;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .blog__info-3 {
-    width: 70%;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__info-3 {
-    width: 80%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__info-3 {
-    width: 90%;
-    margin-left: 0;
-    padding: 30px 20px;
-    border-top-left-radius: 5px;
-  }
-}
-.blog__img {
-  width: 100%;
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.blog__img-3 {
-  width: 100%;
-}
-.blog__img-wrapper {
-  overflow: hidden;
-  margin-bottom: 25px;
-  position: relative;
-  z-index: 9;
-}
-.blog__meta, .blog__meta-2 {
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 1.3;
-  color: var(--black-3);
-  margin-bottom: 10px;
-}
-.blog__meta a, .blog__meta-2 a {
-  color: var(--black-3);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.blog__meta a:hover, .blog__meta-2 a:hover {
-  color: var(--secondary);
-}
-.blog__meta-2 {
-  color: var(--gray-2);
-}
-.blog__meta-2 a {
-  color: var(--gray-2);
-}
-.blog__meta-2 a:hover {
-  color: var(--white);
-}
-.blog__title, .blog__title-3, .blog__title-2 {
-  display: block;
-  font-weight: 500;
-  font-size: 26px;
-  line-height: 1.2;
-  color: var(--black-2);
-  border-bottom: 1px solid var(--gray-5);
-  margin-bottom: 10px;
-  padding-bottom: 20px;
-}
-.blog__title:hover, .blog__title-3:hover, .blog__title-2:hover {
-  color: var(--black-3);
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__title, .blog__title-3, .blog__title-2 {
-    font-size: 22px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__title, .blog__title-3, .blog__title-2 {
-    font-size: 20px;
-  }
-}
-.blog__title-2 {
-  color: var(--white);
-  border-bottom: 0;
-}
-.blog__title-2:hover {
-  color: var(--gray-2);
-}
-.blog__title-3 {
-  padding-bottom: 50px;
-}
-.blog__btn {
-  display: inline-block;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.3;
-  color: var(--black-3);
-  text-transform: capitalize;
-}
-.blog__btn span {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: -28px;
-}
-.blog__btn span i {
-  -webkit-transform: translate(0, 0) rotate(-45deg);
-  transform: translate(0, 0) rotate(-45deg);
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.blog__btn span::after {
-  position: absolute;
-  content: "\f061";
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  left: -20px;
-  bottom: -20px;
-  -webkit-transform: translate(0, 0) rotate(-45deg);
-  transform: translate(0, 0) rotate(-45deg);
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.blog__btn:hover {
-  color: var(--secondary);
-}
-.blog__btn:hover i {
-  -webkit-transform: translate(20px, -20px) rotate(-45deg);
-  transform: translate(20px, -20px) rotate(-45deg);
-}
-.blog__btn:hover span::after {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transform: translate(20px, -20px) rotate(-45deg);
-  transform: translate(20px, -20px) rotate(-45deg);
-}
-.blog__text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100%;
-}
-.blog__text p {
-  font-size: 18px;
-  line-height: 1.4;
-}
-@media only screen and (max-width: 767px) {
-  .blog__text p {
-    padding-top: 30px;
-  }
-}
-.blog__detail {
-  overflow: hidden;
-}
-.blog__detail-top {
-  position: relative;
-  z-index: 1;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__detail-top {
-    padding-top: 90px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__detail-top {
-    padding-top: 60px;
-  }
-}
-.blog__detail-date {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--black-2);
-  padding-bottom: 15px;
-}
-.blog__detail-date span {
-  color: var(--black-3);
-  position: relative;
-  padding-left: 25px;
-}
-.blog__detail-date span::before {
-  position: absolute;
-  content: "";
-  width: 4px;
-  height: 4px;
-  top: 11px;
-  left: 8px;
-  background-color: var(--gray-5);
-  border-radius: 50px;
-}
-.blog__detail-title {
-  font-weight: 500;
-  font-size: 80px;
-  line-height: 1;
-  color: var(--black-2);
-  padding-bottom: 35px;
-}
-@media only screen and (min-width: 1400px) and (max-width: 1919px) {
-  .blog__detail-title {
-    font-size: 60px;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .blog__detail-title {
-    font-size: 60px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__detail-title {
-    font-size: 60px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__detail-title {
-    font-size: 48px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__detail-title {
-    font-size: 36px;
-  }
-}
-.blog__detail-metalist {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 50px;
-  padding-bottom: 50px;
-}
-.blog__detail-meta {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: 15px;
-}
-.blog__detail-meta p {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.5;
-  color: var(--gray-8);
-}
-.blog__detail-meta p span {
-  display: block;
-  color: var(--black-3);
-  font-size: 16px;
-  font-weight: 500;
-}
-.blog__detail-thumb {
-  overflow: hidden;
-  position: relative;
-  width: 100%;
-  height: 70vh;
-}
-.blog__detail-thumb img {
-  position: absolute;
-  bottom: 0;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 120%;
-  margin-left: auto;
-  margin-right: auto;
-}
-@media only screen and (max-width: 767px) {
-  .blog__detail-thumb {
-    padding-bottom: 40px;
-  }
-}
-.blog__detail-thumb img {
-  width: 100%;
-}
-.blog__detail-content {
-  padding-top: 55px;
-  padding-bottom: 30px;
-}
-.blog__detail-content p {
-  font-size: 18px;
-  line-height: 1.4;
-  padding-bottom: 25px;
-}
-.blog__detail-content img {
-  margin-bottom: 30px;
-  max-width: 100%;
-}
-.blog__detail-content h1,
-.blog__detail-content h2 {
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 1.2;
-  color: var(--black);
-  padding-bottom: 15px;
-  padding-top: 10px;
-}
-.blog__detail-content h3 {
-  font-weight: 500;
-  font-size: 30px;
-  line-height: 1.2;
-  color: var(--black);
-  padding-bottom: 15px;
-  padding-top: 10px;
-}
-.blog__detail-content h4 {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.2;
-  color: var(--black);
-  padding-bottom: 15px;
-  padding-top: 10px;
-}
-.blog__detail-content h5 {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  color: var(--black);
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-.blog__detail-content h6 {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.2;
-  color: var(--black);
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-.blog__detail-content ul,
-.blog__detail-content ol {
-  padding-bottom: 25px;
-}
-.blog__detail-content ul li,
-.blog__detail-content ol li {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5;
-  color: var(--black-2);
-  padding-bottom: 5px;
-  padding-left: 25px;
-  position: relative;
-}
-.blog__detail-content ul li::before,
-.blog__detail-content ol li::before {
-  position: absolute;
-  content: "+";
-  left: 0;
-  font-size: 20px;
-}
-.blog__detail-tags p {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.4;
-  color: var(--black-2);
-  text-transform: capitalize;
-}
-.blog__detail-tags p a {
-  color: var(--black-3);
-  text-transform: lowercase;
-  text-decoration-line: underline;
-}
-.blog__related {
-  overflow: hidden;
-}
-@media only screen and (max-width: 767px) {
-  .blog__related .pb-140 {
-    padding-bottom: 0;
-  }
-}
-.blog__related .sec-title-wrapper {
-  padding-bottom: 60px;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog__related .pb-130 {
-    padding-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog__related .pb-130 {
-    padding-bottom: 40px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog__related .pb-130 {
-    padding-bottom: 0;
-  }
-}
-.blog-v2 {
-  padding-bottom: 80px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v2 {
-    padding-bottom: 30px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v2 {
-    padding-bottom: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v2 .pt-150 {
-    padding-top: 130px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v2 .pt-150 {
-    padding-top: 130px;
-  }
-}
-.blog-v2 .sec-text p {
-  padding-bottom: 70px;
-  margin-left: auto;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v2 .sec-text p {
-    padding-bottom: 50px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v2 .sec-text p {
-    padding-bottom: 40px;
-  }
-}
-.blog-v2 .blog__item-2 {
-  margin-bottom: 50px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v2 .blog__item-2 {
-    margin-bottom: 20px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v2 .blog__item-2 {
-    margin-bottom: 0;
-  }
-}
-.blog-v3.blog__area-3 .sec-title-wrapper::after {
-  position: unset;
-}
-.blog-v3 .line {
-  padding-bottom: 70px;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .blog-v3 .line {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v3 .line {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v3 .line {
-    padding-top: 50px;
-    padding-bottom: 30px;
-  }
-}
-.blog-v3 .blog__item-3 {
-  margin-bottom: 80px;
-  position: relative;
-  z-index: 1;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .blog-v3 .blog__item-3 {
-    margin-bottom: 50px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .blog-v3 .blog__item-3 {
-    margin-bottom: 50px;
-  }
-}
+
 
 .img-box {
   position: relative;
