--- a/templates/composant/login-register-nav-bar.html.twig
+++ b/templates/composant/login-register-nav-bar.html.twig
@@ -1,13 +1,13 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
-  <div class="d-flex align-items-center justify-content-between">
-    <a href="{{ path('app_home') }}" class="logo d-flex align-items-center">
-      <img src="" alt="">
-      <span class="d-none d-lg-block">{{ 'app.logo'|trans }}</span>
-    </a>
-    {% block sidebarIcon %}
-      <i class="bi bi-list toggle-sidebar-btn d-block d-lg-none"></i>
-    {% endblock sidebarIcon %}
-  </div>
+    <div class="d-flex align-items-center justify-content-between">
+        <a href="{{ path('app_home') }}" class="logo d-flex align-items-center">
+            <img src="{{ asset('assets/img/logo/logo-principale.png') }}" alt="dealAircraft logo" class="d-lg-block d-none">
+            <img src="{{ asset('assets/img/logo/logo1.png') }}" alt="dealAircraft logo" class="d-block d-lg-none">
+            <span class="d-none d-lg-block"><span class="text-danger">Deal</span>Aircraft</span>
+        </a>
+
+
+    </div>
 
   <nav class="header-nav ms-auto">
     <ul class="d-flex align-items-center">
@@ -41,8 +41,10 @@
       </li>
 
       <li class="nav-item dropdown pe-3">
-        <a class="nav-link btn py-1" href="{{ path('app_register') }}" style="border: 1px solid #1A0B8C !important; color : #1A0B8C !important;">
-          <i class="bi bi-box-arrow-in-right me-1"></i> {{ 'register.button'|trans }}
+        <a class="nav-link btn py-1" href="{{ path('app_register') }}" style="border: 1px solid var(--primary-color) !important; color : var(--primary-color) !important;">
+            <span class="d-block d-md-none"><i class="bi bi-person-circle fs-4"></i></span>
+            <span class="d-none d-md-block"><i class="bi bi-box-arrow-in-right me-1"></i> {{ 'register.button'|trans }}</span>
+
         </a>
       </li>
     </ul>
