--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,34 +1,72 @@
 {% extends 'base.html.twig' %}
+{% block header %}
+    {% set showSidebarIcon = false %}
+    {{ parent() }}
+{% endblock %}
 
 {% block sidebar %}{% endblock %}
+
+
 
 {% block main %}
     <main id="aviation-homepage" class="main bg-light">
         <section class="d-flex flex-column align-items-center justify-content-center" style="min-height: 80vh;">
-            <div class="container text-center px-0" style="max-width: 800px; margin-top: 15vh;">
+            <div class="container text-center px-0" style="max-width: 1200px; margin-top: 15vh;">
                 <!-- Search Bar -->
-                <div class="search-filter w-100">
-                    <h4 class="h3 my-5 bold" style="color:#1A0B8C;">{{ 'homepage.title'|trans }}</h4>
-                    {{ form_start(search_form, {method: 'GET', 'attr': { 'class': 'aviation-search-form', action: path('app_aircraft_main_search')}}) }}
-                    <div class="input-group aviation-search-group shadow-sm">
-                        {{ form_widget(search_form.aircraftCategory) }}
-                        <div class="vr mx-1 d-none d-md-flex"></div>
-                        {{ form_widget(search_form.aircraftManufacturer) }}
-                        <div class="vr mx-1 d-none d-md-flex"></div>
-                        {{ form_widget(search_form.model) }}
-                        <button class="btn submit" type="submit" style="width: 46px;">
-                            <i class="bi bi-search"></i>
-                        </button>
+                <div class="search-filter container my-5">
+                    <h4 class="h3 text-center fw-bold mb-4" style="color: var(--primary-color);">
+                        {{ 'homepage.title'|trans }}
+                    </h4>
+
+                    {{ form_start(search_form, {
+                        method: 'GET',
+                        attr: {
+                            action: path('app_aircraft_main_search')
+                        }
+                    }) }}
+
+                    <div class="row g-3 align-items-center justify-content-center shadow-sm p-4 bg-white rounded">
+                        <div class="col-12 col-lg-3">
+                            {{ form_widget(search_form.aircraftCategory, {
+                                attr: {
+                                    class: 'form-select form-control'
+                                }
+                            }) }}
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            {{ form_widget(search_form.aircraftManufacturer, {
+                                attr: {
+                                    class: 'form-select form-control'
+                                }
+                            }) }}
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            {{ form_widget(search_form.model, {
+                                attr: {
+                                    class: 'form-select form-control'
+                                }
+                            }) }}
+                        </div>
+                        <div class="col-12 col-lg-2 d-grid">
+                            <button type="submit" class="btn px-2 py-2 text-white" style="background-color: var(--primary-color); border-color: var(--primary-color);">
+                                <i class="bi bi-search me-2"></i>{{ 'Search'|trans }}
+                            </button>
+
+                        </div>
                     </div>
+
                     {{ form_end(search_form) }}
                 </div>
+
+
+
 
                 <!-- CTA Buttons -->
                 <div class="my-5">
                     <a class="btn btn-light border mx-1 px-3 py-2" href="{{ path('app_aircraft_index') }}">
                         {{ 'cta.explore'|trans }}
                     </a>
-                    <a class="btn mx-1 px-3 py-2 text-white" href="{{ path('app_aircraft_new') }}" style="background-color:#1A0B8C;">
+                    <a class="btn mx-1 px-3 py-2 text-white" href="{{ path('app_aircraft_new') }}" style="background-color: var(--primary-color);">
                         <i class="fas fa-plus-circle me-1"></i> {{ 'cta.sell'|trans }}
                     </a>
                 </div>
@@ -82,17 +120,31 @@
         </section>
 
         <!-- Listings Section -->
-        <section class="listings-section py-2 bg-light">
+        <section class="listings-section py-2" style="background-color: #eef1f6;">
             <div class="container">
-                <div class="text-center my-5">
-                    <h2 class="fw-bold">{{ 'listings.title'|trans }}</h2>
-                    <p class="text-muted">{{ 'listings.subtitle'|trans }}</p>
+                <div class="my-5">
+                    <div class="row align-items-center">
+                        <!-- Titre et sous-titre -->
+                        <div class="col-md-8 mb-3 mb-md-0">
+                            <h2 class="fw-bold mb-1">{{ 'listings.title'|trans }}</h2>
+                            <p class="text-muted mb-0">{{ 'listings.subtitle'|trans }}</p>
+                        </div>
+
+                        <!-- Bouton à droite -->
+                        <div class="col-md-4 text-md-end">
+                            <a class="btn py-1 px-3 border" href="{{ path('app_aircraft_index') }}"
+                               style="border-color: var(--primary-color) !important; color: var(--primary-color) !important;">
+                                <i class="bi bi-card-list me-1"></i> Voir plus d'annonces
+                            </a>
+                        </div>
+                    </div>
                 </div>
+
 
                 <div class="row g-4">
                     {% for aircraft in allAirCrafts %}
                         <div class="col-md-4 col-lg-3">
-                            <div class="aircraft-card" style="border: 2px solid #0d6efd;">
+                            <div class="aircraft-card" >
                                 <div class="aircraft-image">
                                     {% if aircraft.airCraftImages|length > 0 %}
                                         <img src="{{ asset('uploads/images/aircraft/' ~ aircraft.airCraftImages[0].image) }}"
@@ -101,20 +153,20 @@
                                 </div>
                                 <div class="aircraft-details">
                                     <div>
-                                        <span class="aircraft-type">{{ aircraft.aircraftCategory.name }}</span>
+                                        <span class="aircraft-type" style="color:var(--primary-color);">{{ aircraft.aircraftCategory.name }}</span>
                                     </div>
                                     <small class="text-primary bold">
-                                        <span>{{ aircraft.yearOfManufacture }}</span>
-                                        {{ aircraft.aircraftManufacturer.name }} {{ aircraft.model }}
+                                        <span style="color:var(--primary-color);">{{ aircraft.yearOfManufacture }}
+                                        {{ aircraft.aircraftManufacturer.name }} {{ aircraft.model }}</span>
                                     </small>
                                     <p class="aircraft-location">
                                         {{ 'location'|trans }} {{ aircraft.city }}, {{ aircraft.country }}
                                     </p>
-                                    <div class="aircraft-price">{{ 'price'|trans }}€{{ aircraft.price|number_format(0, ',', ' ') }}</div>
+                                    <div class="aircraft-price" style="font-size: 1.25rem; font-weight: 600; color: var(--primary-color);">{{ 'price'|trans }} {{ aircraft.price|number_format(0, ',', ' ') }} €</div>
                                     <div class="bg-white border-top-0 py-0">
                                         <div class="d-grid">
                                             <a href="{{ path('app_aircraft_show', {'slug': aircraft.slug}) }}"
-                                               class="btn btn-outline-primary">
+                                               class="btn btn-style-outline">
                                                 {{ 'cta.details'|trans }}
                                             </a>
                                         </div>
@@ -128,17 +180,76 @@
         </section>
 
         <!-- Blog Section -->
-        <section class="blog-section py-5 bg-light">
+        <section class="blog-section py-5" style="background-color:#f0f2f5;">
             <div class="container">
-                <div class="text-center mb-5">
+                <div class="mb-5">
                     <h2 class="fw-bold">{{ 'blog.title'|trans }}</h2>
-                    <p class="text-muted">{{ 'blog.subtitle'|trans }}</p>
+
+                    <div class="row align-items-center mt-3">
+                        <!-- Texte à gauche -->
+                        <div class="col-md-8 mb-3 mb-md-0">
+                            <p class="text-muted mb-0">{{ 'blog.subtitle'|trans }}</p>
+                        </div>
+
+                        <!-- Bouton à droite -->
+                        <div class="col-md-4 text-md-end">
+                            <a class="btn py-1 px-3 border" href="{{ path('app_blog_listing') }}" style="border-color: var(--primary-color) !important; color: var(--primary-color) !important;">
+                                <i class="bi bi-journal-text me-1"></i> Tous les articles
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="row g-4">
-                    <!-- Blog content here -->
+
+                <div class="articles-preview row">
+                        {% for article in blog_articles %}
+                            <div class="m-0 p-0">
+                                <article>
+                                    <a href="{{ path('app_blog_show', {'slug': article.slug}) }}" style="text-decoration: none; color: inherit;">
+                                        <img src="{{ asset('uploads/blog/article_image/' ~ article.image) }}" alt="{{ article.image }}" />
+                                        <h3><b>{{ article.title|length > 55 ? article.title|slice(0, 55) ~ '...' : article.title }}</b></h3>
+                                        <time>Date de publication : {{ article.publishedAt | date('d-m-y') }}</time>
+                                    </a>
+                                </article>
+                            </div>
+                        {% endfor %}
+
                 </div>
             </div>
         </section>
+        <section class="py-5 bg-light">
+            <div class="container">
+                <div class="row align-items-center">
+
+                    <!-- Texte -->
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <h2 class="fw-bold mb-3">
+                            <i class="bi bi-info-circle-fill text-primary me-2"></i>
+                            À propos de nous
+                        </h2>
+                        <p class="text-muted">
+                            DealAircraft.com facilite l’accès à des milliers d’annonces d’avions à vendre,
+                            ainsi qu’à des pièces détachées, composants et aéronefs à récupérer.
+                            Les acheteurs peuvent y trouver tous types d’avions neufs ou d’occasion,
+                            notamment des jets, des turbopropulseurs, des avions à moteur à piston,
+                            des avions légers de sport, des hélicoptères (à moteur à piston ou à turbine),
+                            des hydravions et amphibies, ainsi que des aéronefs expérimentaux ou construits à domicile.
+                        </p>
+                        <p class="text-muted">
+                            Le site propose également des annonces pour divers secteurs : aviation privée, commerciale, militaire, agricole, ainsi que pour des équipements spécialisés comme des réservoirs de carburant, des unités de puissance, des hangars ou encore du matériel de dégivrage.
+                        </p>
+                        <a href="{{ path('app_about_us') }}" class="btn btn-outline-primary mt-3">
+                            <i class="bi bi-info-circle me-1"></i> En savoir plus
+                        </a>
+                    </div>
+
+                    <!-- Image -->
+                    <div class="col-md-6 text-center">
+                        <img src="{{ asset('assets/img/logo/slogan.png') }}" class="img-fluid rounded shadow" alt="À propos de nous">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Styles remain unchanged -->
@@ -164,75 +275,6 @@
 
 {% endblock %}
 
-{% block footer %}
-    <footer class="text-white pt-5 pb-4 mt-5" style="background-color: #1A0B8C;">
-        <div class="container">
-            <div class="row">
-                <!-- Logo et Description -->
-                <div class="col-md-4 mb-4">
-                    <img src="{{ asset('images/your-logo.png') }}" alt="Logo" style="height: 50px;" class="mb-3">
-                    <p class="text-white">
-                        <small>
-                            {{ 'footer.description'|trans }}
-                        </small>
-                    </p>
-                    <div class="d-flex gap-3">
-                        <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
 
-                <!-- Liens utiles -->
-                <div class="col-md-2 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-3">{{ 'footer.navigation'|trans }}</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="" class="text-white text-decoration-none">{{ 'footer.home'|trans }}</a></li>
-                        <li><a href="" class="text-white text-decoration-none">{{ 'footer.blog'|trans }}</a></li>
-                        <li><a href="" class="text-white text-decoration-none">{{ 'footer.contact'|trans }}</a></li>
-                        <li><a href="" class="text-white text-decoration-none">{{ 'footer.about'|trans }}</a></li>
-                    </ul>
-                </div>
-
-                <!-- Catégories -->
-                <div class="col-md-3 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-3">{{ 'footer.categories'|trans }}</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="{{ path('app_aircraft_by_category', {'categoryName':'Jet Aircraft'}) }}" class="text-white text-decoration-none">{{ 'footer.category.jet'|trans }}</a></li>
-                        <li><a href="{{ path('app_aircraft_by_category', {'categoryName':'Turboprop Aircraft'}) }}" class="text-white text-decoration-none">{{ 'footer.category.turboprop'|trans }}</a></li>
-                        <li><a href="{{ path('app_aircraft_by_category', {'categoryName':'Piston Single'}) }}" class="text-white text-decoration-none">{{ 'footer.category.piston_single'|trans }}</a></li>
-                        <li><a href="{{ path('app_aircraft_by_category', {'categoryName':'Experimental'}) }}" class="text-white text-decoration-none">{{ 'footer.category.experimental'|trans }}</a></li>
-                    </ul>
-                </div>
-
-                <!-- Newsletter -->
-                <div class="col-md-3 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-3">{{ 'footer.newsletter'|trans }}</h6>
-                    <p class="text-white">{{ 'footer.newsletter_description'|trans }}</p>
-                    <form>
-                        <div class="input-group">
-                            <input type="email" class="form-control" placeholder="{{ 'footer.email_placeholder'|trans }}">
-                            <button class="btn btn-primary" type="submit"><i class="fas fa-paper-plane"></i></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-
-            <hr class="border-secondary">
-
-            <!-- Footer bottom -->
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
-                <p class="mb-2 mb-md-0 text-white">&copy; {{ "now"|date("Y") }} {{ 'footer.copyright'|trans }}</p>
-                <div>
-                    <a href="#" class="text-white me-3 text-decoration-none">{{ 'footer.legal_notice'|trans }}</a>
-                    <a href="#" class="text-white text-decoration-none">{{ 'footer.privacy_policy'|trans }}</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-{% endblock %}
 
 
