--- a/templates/reset_password/change.html.twig
+++ b/templates/reset_password/change.html.twig
@@ -38,7 +38,7 @@
 
 <!-- Bouton de soumission -->
 <div class="form-group">
-    <button type="submit" class="btn btn-primary">{{ 'form.save'|trans }}</button>
+    <button type="submit" class="btn text-white" style="background-color : var(--primary-color);">{{ 'form.save'|trans }}</button>
 </div>
 
 {{ form_end(resetForm) }}
