--- a/templates/security/page-login.html.twig
+++ b/templates/security/page-login.html.twig
@@ -24,14 +24,32 @@
                     <div class="col-12 pt-4">
                       <label for="username" class="form-label">{{ 'login.email'|trans }}</label>
                       <div class="input-group has-validation">
-                        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+                        <input
+                                type="text"
+                                value="{{ last_username }}"
+                                name="_username"
+                                id="username"
+                                class="form-control"
+                                placeholder="Entrez votre adresse email"
+                                autocomplete="email"
+                                required
+                                autofocus
+                        >
                         <div class="invalid-feedback">{{ 'login.error.username_required'|trans }}</div>
                       </div>
                     </div>
 
                     <div class="col-12">
                       <label for="password" class="form-label">{{ 'login.password'|trans }}</label>
-                      <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+                      <input
+                              type="password"
+                              name="_password"
+                              id="password"
+                              class="form-control"
+                              placeholder="Entrez votre mot de passe"
+                              autocomplete="current-password"
+                              required
+                      >
                       <div class="invalid-feedback">{{ 'login.error.password_required'|trans }}</div>
                     </div>
 
@@ -50,7 +68,7 @@
                     </div>
 
                     <div class="col-12">
-                      <button class="btn flex text-white border-0" type="submit" style="background-color: #1A0B8C;">
+                      <button class="btn flex text-white border-0" type="submit" style="background-color: var(--primary-color);">
                         {{ 'login.submit'|trans }}
                       </button>
                       <hr>
@@ -62,7 +80,7 @@
                     <hr>
                     <div class="col-12">
                       <p class="small mb-0">
-                        {{ 'login.no_account'|trans }} <a href="{{ path('app_register') }}" style="color:#1A0B8C;">{{ 'login.create_account'|trans }}</a>
+                        {{ 'login.no_account'|trans }} <a href="{{ path('app_register') }}" style="color:var(--primary-color);">{{ 'login.create_account'|trans }}</a>
                       </p>
                     </div>
                   </form>
@@ -87,7 +105,6 @@
     </div>
   </main>
 {% endblock %}
-
 
 {% block footer %}
 {% endblock %}
