--- a/templates/sidebar/sidebar.html.twig
+++ b/templates/sidebar/sidebar.html.twig
@@ -5,11 +5,13 @@
         <input type="hidden" name="aircraftCategories" id="hiddenAircraftCategories" value="">
         <input type="hidden" name="aircraftManufacturers" id="hiddenAircraftManufacturers" value="">
         <ul class="sidebar-nav" id="sidebar-nav">
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" onclick="submitSidebarFilter();">
-                    <i class="bi bi-funnel"></i>
-                    <span>{{ 'sidebar.apply_filters'|trans }}</span>
-                </a>
+            <li class="nav-item text-center my-3">
+                <button style="background-color:var(--primary-color)" type="button"
+                        class="btn w-100 d-flex text-white align-items-center justify-content-center gap-2 py-2 shadow-sm"
+                        onclick="submitSidebarFilter();">
+                    <i class="bi bi-funnel-fill fs-5"></i>
+                    <span class="fw-semibold">{{ 'sidebar.apply_filters'|trans }}</span>
+                </button>
             </li>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-bs-toggle="modal" data-bs-target="#categoryFilterModal">
@@ -102,29 +104,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#number-seats-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-person-bounding-box"></i><span>{{ 'sidebar.number_of_seats'|trans }}</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="number-seats-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a>
-                            <div class="form-floating col-12">
-                                <input type="number" class="form-control form-control-sm" id="sidebarMinSeat" name="aircraft_min_seat" placeholder="{{ 'sidebar.min_seats'|trans }}" min="0">
-                                <label for="sidebarMinSeat" class="text-muted fw-normal">{{ 'sidebar.min_seats'|trans }}</label>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <div class="form-floating col-12">
-                                <input type="number" class="form-control form-control-sm" id="sidebarMaxSeat" name="aircraft_max_seat" placeholder="{{ 'sidebar.max_seats'|trans }}" min="0">
-                                <label for="sidebarMaxSeat" class="text-muted fw-normal">{{ 'sidebar.max_seats'|trans }}</label>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#date-published-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-calendar3"></i><span>{{ 'sidebar.published_date'|trans }}</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -185,20 +165,13 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#registration-number-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-calendar-check"></i><span>{{ 'sidebar.registration_number'|trans }}</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="registration-number-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a>
-                            <div class="form-floating col-12">
-                                <input type="text" class="form-control form-control-sm" id="sidebarRegistrationNumber" name="aircraft_registration_number" placeholder="{{ 'sidebar.registration_number'|trans }}">
-                                <label for="sidebarRegistrationNumber" class="text-muted fw-normal">{{ 'sidebar.registration_number'|trans }}</label>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+            <li class="nav-item text-center my-3">
+                <button style="background-color:var(--primary-color)" type="button"
+                        class="btn w-100 d-flex text-white align-items-center justify-content-center gap-2 py-2 shadow-sm"
+                        onclick="submitSidebarFilter();">
+                    <i class="bi bi-funnel-fill fs-5"></i>
+                    <span class="fw-semibold">{{ 'sidebar.apply_filters'|trans }}</span>
+                </button>
             </li>
         </ul>
     </form>
